@@ -101,8 +101,16 @@ proc libffi-init { args } {
     global tool_root_dir
     global ld_library_path
 
+    global using_gcc
+
     set blddirffi [pwd]/.. 
     verbose "libffi $blddirffi"
+
+    # Are we building with GCC?
+    set tmp [grep ../config.status "GCC='yes'"]
+    if { [string match $tmp "GCC='yes'"] } {
+
+      set using_gcc "yes"
 
     set gccdir [lookfor_file $tool_root_dir gcc/libgcc.a]
     if {$gccdir != ""} {
@@ -127,6 +135,13 @@ proc libffi-init { args } {
 	    }
 	}
     }
+ 
+    } else {
+
+      set using_gcc "no"
+
+    }
+
     # add the library path for libffi.
     append ld_library_path ":${blddirffi}/.libs"
 
